5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1716_2499.log
== TEST (2019-05-14 16:50:33) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<K):
	soma=soma+(1+(k)/factorial(exp))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(CO<K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:50:42) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+(k)/factorial(exp))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:50:59) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:00) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:07) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:10) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:12) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:14) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((k)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
25.02638889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:24) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:26) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:29) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:51:31) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1
while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:52:06) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	soma=soma+(k+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
50.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:52:08) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	soma=soma+(k+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
50.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:52:11) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	soma=soma+(k+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
50.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:52:45) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	exp=exp+1
	soma=soma+(k+((1)/factorial(exp)))
	CO+=1
print(round(soma,8))
-- OUTPUT:
49.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:52:47) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	exp=exp+1
	soma=soma+(k+((1)/factorial(exp)))
	CO+=1
print(round(soma,8))
-- OUTPUT:
49.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:53:19) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:53:22) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=1

while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:29) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=0

while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
15.71666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:32) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
exp=0

while(CO<k):
	soma=soma+(1+((1)/factorial(exp)))
	exp=exp+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
15.71666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:22) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:36) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:55:43) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- EXECUTION TIME:
0.136191
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:46) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:52) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:58) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=((1)/factorial(divi))+1
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:02) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=((1)/factorial(divi))+1
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:05) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=((1)/factorial(divi))+1
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:31) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:33) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:56:43) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
	print(round(soma,8))
-- OUTPUT:
9.0
10.5
11.66666667
12.70833333
13.71666667
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:24) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1*((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:28) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1*((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:31) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1

while(CO<k):
	soma=soma+(1*((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:57) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1
sinal=1
while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:59) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1
sinal=1
while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:01) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=k
divi=1
sinal=1
while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:51) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=1
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:56) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=1
divi=1

while(CO<k):
	soma=soma+(1+((1)/factorial(divi)))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
8.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:59:48) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=1
divi=1

while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:14) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=1
divi=1

while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:01:18) 
-- CODE:
from math import*
k=int(input("vlaor de k: "))

CO=1
soma=1
divi=1

while(CO<k):
	soma=soma+((1)/factorial(divi))
	divi=divi+1
	CO+=1
print(round(soma,8))
-- EXECUTION TIME:
0.233039
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
